--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 services:
-  simple-django-api:
+  web:
     # container_name: simple-django-api
     build: .
     volumes:
@@ -10,23 +10,23 @@ services:
       - .env
     environment:
       - DEBUG=1
-    depends_on:
-      - simple-redis
     command: bash -c "python manage.py migrate
       && python manage.py runserver 8000"
     ports:
       - "8000:8000"
 
-  simple-redis:
-    image: redis:alpine
+  # redis:
+  #   image: redis:alpine
 
-  simple-celery:
-    build: .
-    command: celery -A myproject worker -l info
-    depends_on:
-      - simple-redis
-    volumes:
-      - .:/usr/src/app/
+  # celery:
+  #   restart: always
+  #   build: .
+  #   command: celery -A myproject worker -l info
+  #   depends_on:
+  #     - web
+  #     - redis
+  #   volumes:
+  #     - .:/usr/src/app/
 
 volumes:
   simple-django-db:
