--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,30 +1,37 @@
 version: '3.7'
 services:
   web: 
-    container_name: simple-django-api
     build: ./
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
     working_dir: /usr/src/app/
     ports:
       - 8000:8000
     env_file:
-      - .env
+      - ./.env.dev
     depends_on:
+      - db
+    links:
       - db
 
   db:
     image: postgres:13.0-alpine
+    ports:
+      - 5433:5432 
     volumes:
       - postgres_data:/var/lib/postgres/data/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=simple_is_better_then_complex
+
+  redis:
+    image: redis:alpine
 
   celery:
     build: ./
-    command: celery -A core worker -l info
+    command: celery -A myproject worker -l info
     volumes:
       - ./:/urs/src/app/
     env_file:
@@ -35,7 +42,7 @@ services:
     
   celery-beat:
     build: ./
-    command: celery -A core worker -l info
+    command: celery -A myproject worker -l info
     volumes:
       - ./:/urs/src/app/
     env_file:
